# ggml-gobject

./: LICENSE  README.md  meson.build
.github/workflows/: meson.yml
examples/: meson.build
examples/llm-writer-app/: meson.build
examples/llm-writer-app/data/: main.ui  meson.build  org.ggml-gobject.LLMWriter.Application.data.gresource.xml
examples/llm-writer-app/src/: main.js  meson.build  org.ggml-gobject.LLMWriter.Application.in  org.ggml-gobject.LLMWriter.Application.src.gresource.xml
examples/service-client/: ggml-language-model-client.c  meson.build
ggml-gobject/: ggml-argmax-language-model-sampler.c  ggml-argmax-language-model-sampler.h  ggml-cached-model.c  ggml-cached-model.h  ggml-closure.c  ggml-closure.h  ggml-compute-graph.c  ggml-compute-graph.h  ggml-compute-plan.c  ggml-compute-plan.h  ggml-context.c  ggml-context.h  ggml-execution-memory.c  ggml-execution-memory.h  ggml-functional-language-model-sampler.c  ggml-functional-language-model-sampler.h  ggml-gobject.c  ggml-gobject.h  ggml-gpt.c  ggml-gpt.h  ggml-hyperparameters.c  ggml-hyperparameters.h  ggml-language-model-sampler.c  ggml-language-model-sampler.h  ggml-language-model.c  ggml-language-model.h  ggml-model-config.c  ggml-model-config.h  ggml-model-desc.c  ggml-model-desc.h  ggml-model.c  ggml-model.h  ggml-ops.c  ggml-ops.h  ggml-quantize.c  ggml-quantize.h  ggml-tensor.c  ggml-tensor.h  ggml-token-dictionary.c  ggml-token-dictionary.h  (+5 more)
ggml-gobject/dbus/: ggml-client-language-model-cursor.c  ggml-client-language-model-cursor.h  ggml-client-service.c  ggml-client-service.h  ggml-client-session.c  ggml-client-session.h  ggml-language-model-service.xml  ggml-service.xml  meson.build
ggml-gobject/dbus/internal/: ggml-client-language-model-cursor-internal.h  ggml-client-session-internal.h
ggml-gobject/internal/: ggml-async-queue-source.c  ggml-async-queue-source.h  ggml-closure-internal.h  ggml-compute-plan-internal.h  ggml-context-internal.h  ggml-progress-istream.c  ggml-progress-istream.h  ggml-stream-internal.c  ggml-stream-internal.h  ggml-tensor-internal.h
service/: ggml-language-model-service.c  meson.build
tests/: meson.build
tests/c/: load_model.cpp  meson.build
tests/js/: meson.build  testLoadGPT2.js
